--- a/ShopAndChop_Final/Views/Base.lproj/Main.storyboard
+++ b/ShopAndChop_Final/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="DdM-cb-vhZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ou3-sc-BUg">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -155,10 +155,25 @@
                     <view key="view" contentMode="scaleToFill" id="rh5-Km-zye">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VK0-l3-UlD">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="Gkg-eg-3r4"/>
                         <color key="backgroundColor" red="0.76796373029999998" green="1" blue="0.88218147670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="VK0-l3-UlD" firstAttribute="leading" secondItem="Gkg-eg-3r4" secondAttribute="leading" id="1aL-Y9-gVw"/>
+                            <constraint firstItem="VK0-l3-UlD" firstAttribute="bottom" secondItem="Gkg-eg-3r4" secondAttribute="bottom" id="6Xx-l7-omX"/>
+                            <constraint firstItem="VK0-l3-UlD" firstAttribute="trailing" secondItem="Gkg-eg-3r4" secondAttribute="trailing" id="aTA-95-Zv3"/>
+                            <constraint firstItem="VK0-l3-UlD" firstAttribute="top" secondItem="Gkg-eg-3r4" secondAttribute="top" id="diq-lJ-D8t"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Categories" id="qWp-1Z-M89"/>
+                    <connections>
+                        <outlet property="CategoryTableView" destination="VK0-l3-UlD" id="3z0-z8-l3u"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Whd-QR-ZWf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
