--- a/ShopAndChop_Final/Views/Base.lproj/Main.storyboard
+++ b/ShopAndChop_Final/Views/Base.lproj/Main.storyboard
@@ -151,24 +151,34 @@
         <!--ItemListViewController-->
         <scene sceneID="Kgc-1a-KbA">
             <objects>
-                <viewController storyboardIdentifier="ItemListVC" title="ItemListViewController" id="BLY-eo-eEP" customClass="ItemListVC" customModule="ShopAndChop_Final" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ItemListVC" title="ItemListViewController" modalTransitionStyle="flipHorizontal" id="BLY-eo-eEP" customClass="ItemListVC" customModule="ShopAndChop_Final" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Mh3-eL-ABf">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SMh-DD-nYX">
-                                <rect key="frame" x="20" y="143" width="374" height="30"/>
+                                <rect key="frame" x="20" y="55" width="374" height="30"/>
                                 <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.49803921569999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ORf-qJ-W3Z">
-                                <rect key="frame" x="20" y="181" width="374" height="681"/>
+                                <rect key="frame" x="20" y="93" width="374" height="681"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Mg5-b9-uib">
+                                        <rect key="frame" x="0.0" y="24.5" width="374" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Mg5-b9-uib" id="29g-WC-T0D">
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KmN-JW-9Uf">
-                                <rect key="frame" x="171" y="88" width="72" height="46"/>
+                                <rect key="frame" x="171" y="0.0" width="72" height="46"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <state key="normal" title="+">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -193,7 +203,9 @@
                             <constraint firstItem="xHs-AG-ugj" firstAttribute="trailing" secondItem="SMh-DD-nYX" secondAttribute="trailing" constant="20" id="yUJ-ax-cRJ"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Item List" id="Qhl-xN-jbF"/>
+                    <navigationItem key="navigationItem" title="Item List" id="Qhl-xN-jbF">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="yAj-CC-BTB"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="CategoryLabel" destination="SMh-DD-nYX" id="kX3-Kt-prF"/>
                         <outlet property="addButton" destination="KmN-JW-9Uf" id="mAn-S7-4r9"/>
@@ -353,10 +365,10 @@
             </objects>
             <point key="canvasLocation" x="5317.3913043478269" y="699.77678571428567"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--CategoryNavigationViewController-->
         <scene sceneID="4w8-QE-feT">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="DdM-cb-vhZ" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="CategoryNavigationVC" title="CategoryNavigationViewController" automaticallyAdjustsScrollViewInsets="NO" id="DdM-cb-vhZ" customClass="CategoryNavigationViewController" customModule="ShopAndChop_Final" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="bQv-lU-m9t">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -414,9 +426,11 @@
         <!--CategoryNavigationViewController-->
         <scene sceneID="SEC-ty-iiV">
             <objects>
-                <navigationController title="CategoryNavigationViewController" automaticallyAdjustsScrollViewInsets="NO" id="ou3-sc-BUg" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XA8-1t-64v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <navigationController storyboardIdentifier="CategoryNVC" title="CategoryNavigationViewController" automaticallyAdjustsScrollViewInsets="NO" id="ou3-sc-BUg" customClass="CategoryNavigationViewController" customModule="ShopAndChop_Final" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="hUc-cF-VrB">
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="hUc-cF-VrB">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -425,7 +439,6 @@
                         <segue destination="5nd-db-dbf" kind="relationship" relationship="rootViewController" id="u8q-tm-Edu"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XA8-1t-64v" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="6567" y="250"/>
         </scene>
@@ -434,7 +447,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="HomeVC" title="HomeViewController" id="5nd-db-dbf" customClass="HomeViewController" customModule="ShopAndChop_Final" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="FH4-KH-S0K">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.76796373029999998" green="1" blue="0.88218147670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <prototypes>
